--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 		<div class="big-row">
 			<!--Darbuka picture-->
 			<div class="small-column">
-				<img src="images/Darbuka.png" class="contain-img img-center">
+				<img src="Darbuka.png" class="contain-img img-center">
 			</div>
 			<div class="big-column">
 				<div class="box-row">
 					<!--darbuka map-->
 					<div class="box1">
-						<img src="images/darbuka_map.png" class="map contain-img img-center">
+						<img src="darbuka_map.png" class="map contain-img img-center">
 					</div>
 					<!--first paragraph-->
 					<div class="box2 center">
@@ -34,12 +34,12 @@
 				<div class="box-row">
 					<!--darbuka buttons-->
 					<div class="box4 contain-img">
-						<img src="images/topdarbuka.png" onclick="document.getElementById('noise1').play();" class="darbuka">
-						<img src="images/topdarbuka.png" onclick="document.getElementById('noise2').play();" class="darbuka">
-						<img src="images/topdarbuka.png" onclick="document.getElementById('noise3').play();" class="darbuka">
-						<audio src="darbuka_sounds/Darbuka2.mp3" id="noise2">
-						<audio src="darbuka_sounds/Darbuka1.mp3" id="noise1">
-						<audio src="darbuka_sounds/Darbuka3.mp3" id="noise3">
+						<img src="topdarbuka.png" onclick="document.getElementById('noise1').play();" class="darbuka">
+						<img src="topdarbuka.png" onclick="document.getElementById('noise2').play();" class="darbuka">
+						<img src="topdarbuka.png" onclick="document.getElementById('noise3').play();" class="darbuka">
+						<audio src="Darbuka2.mp3" id="noise2">
+						<audio src="Darbuka1.mp3" id="noise1">
+						<audio src="Darbuka3.mp3" id="noise3">
 					</div>
 					<!--second paragraph-->
 					<div class="box3 center">
