--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	</head>
 	
 	<body>
-		<!--header-->
+		<!--The header text is definitely going to be bigger than the other text.-->
 		<div class="small-row center">
 			<h1>دربوكة‎ ال<br>The Darbuka</h1>
 		</div>
 		
-		<!--content-->
+		<!--All the ohter code is now going to be labeled as "content"-->
 		<div class="big-row">
 			<!--Darbuka picture-->
 			<div class="small-column">
@@ -34,6 +34,7 @@
 				<div class="box-row">
 					<!--darbuka buttons-->
 					<div class="box4 contain-img">
+						<!--These buttons, when pressed, play darbuka noises.-->
 						<img src="topdarbuka.png" onclick="document.getElementById('noise1').play();" class="darbuka">
 						<img src="topdarbuka.png" onclick="document.getElementById('noise2').play();" class="darbuka">
 						<img src="topdarbuka.png" onclick="document.getElementById('noise3').play();" class="darbuka">
